Changed version number and pointed to the GitHub page.

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([dvbsnoop],[1.4.51],[rasc@users.sourceforge.net])
+AC_INIT([dvbsnoop],[1.4.5X],[rasc@users.sourceforge.net])
 AM_INIT_AUTOMAKE([dist-bzip2 no-define])
 
 AC_PROG_CC
